New Update by Ali

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to updated code of GitHub Practice</h1>
+    <h1>Welcome to updated code by Ali of GitHub Practice</h1>
     <p>This is a simple HTML page to practice Git commands with your team.</p>
     <button onclick="alert('Hello, GitHub!')">Click Me</button>
 </body>
